--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
 }
 
 .logo img {
-    height: 50px;
+    height: 150px;
+    width: 250px;
     
 }
 
@@ -293,7 +294,9 @@ body {
 
 .location-map {
     flex: 1 1 40%;
-    max-width: 400px;
+    max-width: 800px;
+    width: 20px;
+    
 }
 
 .location-map img {
